@@ -8,6 +8,9 @@
   :profiles {:dev {:dependencies [[org.apache.hadoop/hadoop-core "0.20.2-dev"]
                                   [midje-cascalog "0.4.0"]]}
              :plugins [[lein-midje "2.0.0-SNAPSHOT"]]}
+  :jvm-opts ["-XX:MaxPermSize=128M"
+             "-XX:+UseConcMarkSweepGC"
+             "-Xms1024M" "-Xmx1800M" "-server"]
   :plugins [[lein-swank "1.4.4"]
             [lein-emr "0.1.0-SNAPSHOT"]]
   :dependencies [[org.clojure/clojure "1.4.0"]
